# petrel_chicks

./: CHANGELOG.md  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: actions.yml
petrel_chicks/: __init__.py  cli.py  filter_per_season.py  fit_model_for_peak_mass.py  fiter_per_season.py  petrel_age_predictor.py  plot_peak_mass_model.py
pollos_petrel/: __init__.py
tests/: test_calculate_mass_loss_rates.py  test_cli.py  test_error_estimator_function.py  test_filter_per_season.py  test_fit_model_for_peak_mass.py  test_petrel_age_predictor.py  test_plot_peak_mass_model.py  test_transformations.py
tests/data/: closed_population_size_petrel_todos_santos.json  logistic_curve.csv  medidas_morfometricas_con_edades.csv  medidas_morfometricas_petrel_san_benito.csv  open_population_size_petrel_todos_santos.json
