[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Ciencia de Datos • GECI"
author-email = "ciencia.datos@islas.org.mx"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
home-page = "https://github.com/IslasGECI/petrel_chicks"
module = "petrel_chicks"
requires = [
    "geci_plots @ git+https://github.com/IslasGECI/geci_plots.git@v0.4.0",
    "lmfit",
    "mean_differences_mc @ git+https://github.com/IslasGECI/mean_differences_mc.git",
    "numpy==1.26.4",
    "pandasql",
    "scikit-learn==1.1.3",
]
requires-python=">=3.9"
